# SistemaDeInscripciones

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  dockerfile
Backend/: .dockerignore  CMakeLists.txt
Backend/src/: main.cpp
Backend/src/DBConfig/: DBConfig.h
Backend/src/Generics/: Controller.h
src/: main.cpp
src/DBConfig/: DBConfig.cpp
src/Equipo/Controllers/: AlumnoController.cpp  AlumnoController.h  ContactoEmergenciaController.h
src/Equipo/Models/: AlumnoModel.cpp  AlumnoModel.h  ContactoEmergenciaModel.cpp  ContactoEmergenciaModel.h  EquipoModel.cpp  EquipoModel.h
src/Equipo/Repositories/: AlumnoRepository.cpp  AlumnoRepository.h  ContactoEmergenciaRepository.cpp  ContactoEmergenciaRepository.h  EquipoRepository.cpp
src/Equipo/Services/: AlumnoService.cpp  AlumnoService.h  ContactoEmergenciaService.cpp  ContactoEmergenciaService.h  EquipoService.cpp  EquipoService.h
src/Generics/: Controller.h  Entity.h  Entiy.cpp  Repository.h  Service.h
src/Problematica/Model/: ProblemaModel.cpp  ProblemaModel.h
src/Problematica/Repositories/: ProblemaRepository.cpp  ProblemaRepository.h
src/Problematica/Repositoryie/: ProblemaRepository.cpp
src/Problematica/Service/: ProblemaService.cpp  ProblemaService.h
src/Registro/Controllers/: RegistroController.cpp  RegistroController.h
src/Registro/Models/: RegistroModel.cpp
src/Registro/Repositories/: RegistroRepository.cpp  RegistroRepository.h
src/Registro/Services/: RegistroService.cpp  RegistroService.h
src/Universidad/Controllers/: UniversidadController.cpp  (+1 more)
(+22 files in other folders)
